[gd_scene load_steps=3 format=3 uid="uid://bmi1t6ikkp1il"]

[ext_resource type="Script" path="res://levels/caels_demo.gd" id="1_w6ntj"]
[ext_resource type="TileSet" uid="uid://cu6qu8gox8x2g" path="res://blocks/blocks_tileset.tres" id="2_sf0go"]

[node name="Demo" type="Node2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_w6ntj")

[node name="ShadowTileMap" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_set = ExtResource("2_sf0go")

[node name="PlacedTilesMap" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_map_data = PackedByteArray(0, 0, 4, 0, 4, 0, 3, 0, 0, 0, 0, 0, 0, 0)
tile_set = ExtResource("2_sf0go")

[node name="NextTileMap" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_set = ExtResource("2_sf0go")

[node name="UI" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="UI"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Food: 0"

[node name="Label2" type="Label" parent="UI"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Water: 0"

[node name="Label3" type="Label" parent="UI"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Electricity: 0"

[node name="Label4" type="Label" parent="UI"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "People: 0"

[node name="Label5" type="Label" parent="UI"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Coins: 0"
